--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -1,3 +1,5 @@
-transformers
-fastpi
-uvicorn[standard]
+fastapi>=0.68.0,<0.69.0
+uvicorn>=0.15.0,<0.16.0
+torch>=1.10.0
+transformers>=4.11.3
+sentencepiece>=0.1.96
