fix missing secret

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -18,17 +18,14 @@ jobs:
           docker tag server registry.heroku.com/sem-test-1101/web
       - name: login to heroku and push image
         run: |
-          docker login --username=_ --password=$HEROKU_AUTH_TOKEN registry.heroku.com
+          docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
           docker push registry.heroku.com/sem-test-1101/web
           
           curl https://cli-assets.heroku.com/install.sh | sh
           heroku --version # verify install
-          echo "machine api.heroku.com\n\tlogin mcantacu@andrew.cmu.edu\n\tpassword $HEROKU_AUTH_TOKEN" > ~/.netrc
-          cat ~/.netrc
           
           heroku container:release web -a sem-test-1101
         env:
-          HEROKU_AUTH_TOKEN: ${{ secrets.HEROKU_AUTH_TOKEN }}
           HEROKU_API_KEY: ${{ secrets.HEROKU_AUTH_TOKEN }}
   
   deploy-ml:
@@ -44,14 +41,14 @@ jobs:
         run: |
           APP_NAME=sem-ml-1101
 
-          docker login --username=_ --password=$HEROKU_AUTH_TOKEN registry.heroku.com
+          docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
           docker push registry.heroku.com/$APP_NAME/web
           
           curl https://cli-assets.heroku.com/install.sh | sh
           heroku --version
-          echo "machine api.heroku.com\n\tlogin mcantacu@andrew.cmu.edu\n\tpassword $HEROKU_AUTH_TOKEN" > ~/.netrc
-          cat ~/.netrc 
 
           heroku container:release web -a APP_NAME
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_AUTH_TOKEN }}
 
           
