updated docker and docker compose with client, added environment vars to the svelte client, .env files can also be used for that purpose

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /usr/local/client
 
 COPY . .
 
+ARG PARAPHRACE_API_URL
+ENV PARAPHRACE_API_URL=${PARAPHRACE_API_URL}
+
 RUN npm install
 RUN npm run build
 
