Uprated release to master branch + documentation

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -2,7 +2,10 @@ name: Deploy to Production
 on:
   push:
     branches:
-      - release
+      - master
+    paths:
+      - server/**
+      - model/**
   workflow_dispatch:
 
 jobs:
