--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -50,7 +50,7 @@ jobs:
           curl https://cli-assets.heroku.com/install.sh | sh
           heroku --version
 
-          heroku container:release web -a APP_NAME
+          heroku container:release web -a $APP_NAME
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_AUTH_TOKEN }}
 
